# validactylus

./: #README.md#  .#README.md  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test.csv  validactylus.py
docs/: elter_validate.html  elter_validate.md  get_remote_schemas.html  get_remote_schemas.md  index.html  index.md  validactylus.html  validactylus.md  validate_elter.html
src/: #validactylus.py#  .#validactylus.py  _init_.py  elter_validate.py  get_remote_schemas.py  test_schemas_available.py  testdata.csv  validactylus.py  validate_elter.py
src/validactylus/: elter_validate.py
tests/: test_schemas_available.py
