[project]
name = "validactylus"
version = "1.0.0"
authors = [
  { name="Ivo Offenthaler", email="validiraptor-dev@proton.me" },
]
description = "a validation CLI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
    "Operating System :: OS Independent",
]
dependencies = [
    "mkdocstrings[python]>=0.18",
]


[project.urls]
Homepage = "https://github.com/eLTER-RI/validactylus"
Issues = "https://github.com/eLTER-RI/validactylus"


# set path to ./src to import modules for unit tests:
[tool.pytest.ini_options]
pythonpath = [
  "src"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"